--- a/01_Introduction_to_R/Introducing_R.Rnw
+++ b/01_Introduction_to_R/Introducing_R.Rnw
@@ -262,6 +262,16 @@ plot(depth, temperature)
 
 @
 
+
+<<>>=
+TempDepth.lm <- lm(temperature ~ depth)
+
+coef(TempDepth.lm)
+
+@
+
+
+
 \end{document}
 
 
