--- a/01_Introduction_to_R/Introducing_R.tex
+++ b/01_Introduction_to_R/Introducing_R.tex
@@ -378,6 +378,23 @@ Using the linear model, we can analyze several types of data, when the response 
 \includegraphics[width=\maxwidth]{figure/unnamed-chunk-17-1} 
 \end{knitrout}
 
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlstd{TempDepth.lm} \hlkwb{<-} \hlkwd{lm}\hlstd{(temperature} \hlopt{~} \hlstd{depth)}
+
+\hlkwd{coef}\hlstd{(TempDepth.lm)}
+\end{alltt}
+\begin{verbatim}
+## (Intercept)       depth 
+##  16.6000000  -0.5142857
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
+
+
 \end{document}
 
 
