--- a/01_Introduction_to_R/Introducing_R.tex
+++ b/01_Introduction_to_R/Introducing_R.tex
@@ -375,7 +375,7 @@ Using the linear model, we can analyze several types of data, when the response 
 \hlkwd{plot}\hlstd{(depth, temperature)}
 \end{alltt}
 \end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-17-1} 
+\includegraphics[width=\maxwidth]{figure/depth_v_temp-1} 
 \end{knitrout}
 
 
